Mod: pregenerate geo pattern with a liquid tad instead of a js lib

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -2,8 +2,9 @@
 layout: default
 article: true
 ---
-
-<header id="header-cover" class="{% if page.dark %}dark{% else %}clean{% endif %}" style="{% if page.meta.thumb %}background-image: url(/images/{{ page.meta.thumb }}); background-size: cover; background-repeat: no-repeat; {% endif %}height: 100%;" data-stellar-background-ratio="0.5" data-stellar-horizontal-offset="50">
+{% capture header_image %}{% if page.meta.thumb %}url(/images/{{ page.meta.thumb }}){% else %}{% uri_geo_pattern text=page.title %}{% endif %}{% endcapture %}
+{% capture header_class %}{% if page.meta.thumb %}has-cover{% endif %}{% endcapture %}
+<header class="{{ header_class }} {% if page.dark %}dark{% else %}clean{% endif %}" style="background-image: {{ header_image }}; height: 100%;" data-stellar-background-ratio="0.5" data-stellar-horizontal-offset="50">
   {% if page.video %}
     <video id="bg-video" preload="auto" autoplay="true" loop="loop" muted="muted" volume="0" data-stellar-ratio="0.5">
     {% for format in page.video %}
@@ -28,9 +29,11 @@ article: true
     {{ content }}
     <br>
     <p>
-      <small><em>
-        Si vous trouvez une typo, n'hésitez pas à <a href="{{ site.github.repo }}/edit/master/{{ page.path }}">forker et éditer cet article</a>. Merci beaucoup !
-      </em></small>
+      <small>
+        <em>
+          Si vous trouvez une typo, n'hésitez pas à <a href="{{ site.github.repo }}/edit/master/{{ page.path }}">forker et éditer cet article</a>. Merci beaucoup !
+        </em>
+      </small>
     </p>
   </div>
   <div id="comments">
@@ -39,22 +42,24 @@ article: true
 </div>
 {% if page.next %}
   {% capture footer_style %}{% if page.next.dark %}dark{% else %}clean{% endif %}{% endcapture %}
-  {% capture footer_image %}{% if page.next.meta.thumb %}/images/{{ page.next.meta.thumb }}{% endif %}{% endcapture %}
+  {% capture footer_image %}{% if page.next.meta.thumb %}url(/images/{{ page.next.meta.thumb }}){% else %}{% uri_geo_pattern text=page.next.title %}{% endif %}{% endcapture %}
   {% capture footer_message %}Read next{% endcapture %}
   {% capture footer_url %}{{ page.next.url }}{% endcapture %}
   {% capture footer_title %}{{ page.next.title }}{% endcapture %}
   {% capture footer_quote %}{{ page.next.quote }}{% endcapture %}
+  {% capture footer_class %}{% if page.next.meta.thumb %}has-cover{% endif %}{% endcapture %}
 {% else %}
   {% for post in site.related_posts limit:1 %}
     {% capture footer_style %}{% if post.dark %}dark{% else %}clean{% endif %}{% endcapture %}
-    {% capture footer_image %}{% if post.meta.thumb %}/images/{{ post.meta.thumb }}{% endif %}{% endcapture %}
+    {% capture footer_image %}{% if post.meta.thumb %}url(/images/{{ post.meta.thumb }}){% else %}{% uri_geo_pattern text=post.title %}{% endif %}{% endcapture %}
     {% capture footer_message %}Featured post{% endcapture %}
     {% capture footer_url %}{{ post.url }}{% endcapture %}
     {% capture footer_title %}{{ post.title }}{% endcapture %}
     {% capture footer_quote %}{{ post.quote }}{% endcapture %}
+    {% capture footer_class %}{% if post.meta.thumb %}has-cover{% endif %}{% endcapture %}
   {% endfor %}
 {% endif %}
-<footer id="footer-cover" class="{{ footer_style }}" style="{% if footer_image != "" %}background-image: url({{ footer_image }}); background-size: cover; background-repeat: no-repeat; {% endif %}height: 75%; min-height: 500px;" data-stellar-background-ratio="0.5" data-stellar-horizontal-offset="50" data-stellar-vertical-offset="50">
+<footer id="footer-cover" class="{{ footer_class }} {{ footer_style }}" style="background-image: {{ footer_image }}; height: 75%; min-height: 500px;" data-stellar-background-ratio="0.5" data-stellar-horizontal-offset="50" data-stellar-vertical-offset="50">
   <div id="nav-icon" style="top: 60px;" data-stellar-ratio="0.8">
     <a class="scroll" data-speed="500" href="#article"><span class="genericon genericon-collapse"></span></a>
   </div>
@@ -69,17 +74,3 @@ article: true
   </div>
   <p class="copyright">&copy; {{ site.time | date: "%Y" }}, <a href="{{ site.copyright.url }}" target="_blank">{{ site.copyright.author }}</a>. <a href="{{ site.copyright.type_url }}" target="_blank">{{ site.copyright.type_title }}</a>.</p>
 </footer>
-{% if page.meta.thumb == false %}
-<script>
-  document.addEventListener("DOMContentLoaded", function(event) {
-    $('#header-cover').geopattern("{{ page.title }}");
-  });
-</script>
-{% endif %}
-{% if footer_image == "" %}
-<script>
-  document.addEventListener("DOMContentLoaded", function(event) {
-    $('#footer-cover').geopattern("{{ footer_title }}");
-  });
-</script>
-{% endif %}
