--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -2,7 +2,8 @@
 layout: default
 ---
 
-<header class="clean" style="height: 350px; background-image: url({{ site.cover }});" data-stellar-background-ratio="0.5" data-stellar-horizontal-offset="50">
+{% capture pattern %}{% uri_geo_pattern text=page.title %}{% endcapture %}
+<header class="clean" style="background-image: {{ pattern }}; height: 350px;" data-stellar-background-ratio="0.5" data-stellar-horizontal-offset="50">
     {% include top.html %}
     <a href="{{ site.url }}">
         <div id="home-title" class="site-icon-page" style="background-image: url({{ site.icon }});" data-stellar-ratio="0.7"></div>
@@ -17,6 +18,6 @@ layout: default
     {{ content }}
 </div>
 </div>
-<footer class="clean" style="background-image: url({{ site.cover }}); background-position: bottom; height: 60px;" data-stellar-background-ratio="0.5" data-stellar-horizontal-offset="50" data-stellar-vertical-offset="50">
+<footer class="clean" style="background-image: {{ pattern }}; background-position: bottom; height: 60px;" data-stellar-background-ratio="0.5" data-stellar-horizontal-offset="50" data-stellar-vertical-offset="50">
     <p class="copyright">&copy;{{ site.time | date: "%Y" }}, <a href="{{ site.copyright.url }}" target="_blank">{{ site.copyright.author }}</a>. <a href="{{ site.copyright.type_url }}" target="_blank">{{ site.copyright.type_title }}</a>.</p>
 </footer>
