--- a/_includes/top.html
+++ b/_includes/top.html
@@ -13,7 +13,7 @@
         <a href="{{ social.url }}" class="social-links-menu" target="_blank" title="{{ social.desc }}"><span class="genericon genericon-{{ social.icon }}"></span></a>
     {% endfor %}
 </div>
-<div class="social-links" data-stellar-ratio="0.1">
+<div class="social-links">
     {% for social in site.data.social %}
         <a href="{{ social.url }}" target="_blank" title="{{ social.desc }}"><span class="genericon genericon-{{ social.icon }}"></span></a>
     {% endfor %}
