--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -3,21 +3,21 @@ layout: default
 ---
 
 {% capture pattern %}{% uri_geo_pattern text=page.title %}{% endcapture %}
-<header class="clean" style="background-image: {{ pattern }}; height: 350px;" data-stellar-background-ratio="0.5" data-stellar-horizontal-offset="50">
+<header class="clean" style="background-image: {{ pattern }}; height: 350px;">
     {% include top.html %}
     <a href="{{ site.url }}">
-        <div id="home-title" class="site-icon-page" style="background-image: url({{ site.icon }});" data-stellar-ratio="0.7"></div>
+        <div id="home-title" class="site-icon-page" style="background-image: url({{ site.icon }});"></div>
     </a>
     </div>
-    <div id="post-info" style="bottom: 30px; text-align: center; line-height: 45px;" data-stellar-ratio="0.7">
+    <div id="post-info" style="bottom: 30px; text-align: center; line-height: 45px;">
         <h1>{{ page.title }}</h1>
     </div>
 </header>
 <div id="middle">
-<div id="article">
-    {{ content }}
+    <div id="article">
+        {{ content }}
+    </div>
 </div>
-</div>
-<footer class="clean" style="background-image: {{ pattern }}; background-position: bottom; height: 60px;" data-stellar-background-ratio="0.5" data-stellar-horizontal-offset="50" data-stellar-vertical-offset="50">
+<footer class="clean" style="background-image: {{ pattern }}; background-position: bottom; height: 60px;">
     <p class="copyright">&copy;{{ site.time | date: "%Y" }}, <a href="{{ site.copyright.url }}" target="_blank">{{ site.copyright.author }}</a>. <a href="{{ site.copyright.type_url }}" target="_blank">{{ site.copyright.type_title }}</a>.</p>
 </footer>
