--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -4,24 +4,24 @@ article: true
 ---
 {% capture header_image %}{% if page.meta.thumb %}url(/images/{{ page.meta.thumb }}){% else %}{% uri_geo_pattern text=page.title %}{% endif %}{% endcapture %}
 {% capture header_class %}{% if page.meta.thumb %}has-cover{% endif %}{% endcapture %}
-<header class="{{ header_class }} {% if page.dark %}dark{% else %}clean{% endif %}" style="background-image: {{ header_image }}; height: 100%;" data-stellar-background-ratio="0.5" data-stellar-horizontal-offset="50">
+<header class="{{ header_class }} {% if page.dark %}dark{% else %}clean{% endif %}" style="background-image: {{ header_image }}; height: 100%;">
   {% if page.video %}
-    <video id="bg-video" preload="auto" autoplay="true" loop="loop" muted="muted" volume="0" data-stellar-ratio="0.5">
+    <video id="bg-video" preload="auto" autoplay="true" loop="loop" muted="muted" volume="0">
     {% for format in page.video %}
       <source src="{% for url in format limit:1 offset:1 %}{{ url }}{% endfor %}" type="video/{% for type in format limit:1 %}{{ type }}{% endfor %}">
     {% endfor %}
     </video>
   {% endif %}
   {% include top.html %}
-  <div id="post-info" data-stellar-ratio="0.7">
+  <div id="post-info">
     <h1>{{ page.title }}</h1>
     {% if page.quote %}
       <h2>{{ page.quote }}</h2>
     {% endif %}
     <a class="site-title" href="{{ site.url }}"><div class="site-icon-small" style="background-image: url({{ site.icon }});"></div>{{ site.title }}</a>, in {{ page.date | date_to_long_string }}
   </div>
-  <div id="nav-icon" style="bottom: 30px;" data-stellar-ratio="4">
-    <a class="scroll" data-speed="500" href="#article"><span class="genericon genericon-expand"></span></a>
+  <div id="nav-icon" style="bottom: 30px;">
+    <a class="scroll" href="#article"><span class="genericon genericon-expand"></span></a>
   </div>
 </header>
 <div id="middle">
@@ -46,7 +46,6 @@ article: true
   {% capture footer_message %}Read next{% endcapture %}
   {% capture footer_url %}{{ page.next.url }}{% endcapture %}
   {% capture footer_title %}{{ page.next.title }}{% endcapture %}
-  {% capture footer_quote %}{{ page.next.quote }}{% endcapture %}
   {% capture footer_class %}{% if page.next.meta.thumb %}has-cover{% endif %}{% endcapture %}
 {% else %}
   {% for post in site.related_posts limit:1 %}
@@ -55,21 +54,17 @@ article: true
     {% capture footer_message %}Featured post{% endcapture %}
     {% capture footer_url %}{{ post.url }}{% endcapture %}
     {% capture footer_title %}{{ post.title }}{% endcapture %}
-    {% capture footer_quote %}{{ post.quote }}{% endcapture %}
     {% capture footer_class %}{% if post.meta.thumb %}has-cover{% endif %}{% endcapture %}
   {% endfor %}
 {% endif %}
-<footer id="footer-cover" class="{{ footer_class }} {{ footer_style }}" style="background-image: {{ footer_image }}; height: 75%; min-height: 500px;" data-stellar-background-ratio="0.5" data-stellar-horizontal-offset="50" data-stellar-vertical-offset="50">
-  <div id="nav-icon" style="top: 60px;" data-stellar-ratio="0.8">
-    <a class="scroll" data-speed="500" href="#article"><span class="genericon genericon-collapse"></span></a>
+<footer id="footer-cover" class="{{ footer_class }} {{ footer_style }}" style="background-image: {{ footer_image }}; height: 75%; min-height: 500px;">
+  <div id="nav-icon" style="top: 60px;">
+    <a class="scroll" href="#article"><span class="genericon genericon-collapse"></span></a>
   </div>
-  <div id="post-info" data-stellar-ratio="0.5" data-stellar-vertical-offset="120">
+  <div id="post-info">
     <h3>{{ footer_message }}</h3>
     <a href="{{ footer_url }}">
       <h1>{{ footer_title }}</h1>
-      {% if footer_quote %}
-        <h2>{{ footer_quote }}</h2>
-      {% endif %}
     </a>
   </div>
   <p class="copyright">&copy; {{ site.time | date: "%Y" }}, <a href="{{ site.copyright.url }}" target="_blank">{{ site.copyright.author }}</a>. <a href="{{ site.copyright.type_url }}" target="_blank">{{ site.copyright.type_title }}</a>.</p>
