--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -27,7 +27,11 @@ article: true
 <div id="middle">
   <div id="article">
     {{ content }}
-    <br>
+    <p>
+      <a href="https://plus.google.com/110279340797376178645" rel="author">
+        <img class="media-object" src="https://secure.gravatar.com/avatar/34df2fcf73fb6b987f3e2ea2bcf47802?s=20" alt="Florent Viel"> Florent Viel
+      </a>
+    </p>
     <p>
       <small>
         <em>
