--- a/_includes/foot.html
+++ b/_includes/foot.html
@@ -1,6 +1,4 @@
-<script type="text/javascript" src="/assets/js/jquery-2.1.0.min.js"></script>
-<script type="text/javascript" src="/assets/js/smooth-scroll.js"></script>
-<script type="text/javascript" src="/assets/js/jquery.fittext.js"></script>
+<script type="text/javascript" src="/assets/js/app.min.js"></script>
 <script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
   (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
