--- a/assets/css/default.css
+++ b/assets/css/default.css
@@ -166,7 +166,7 @@ img {
 	padding-bottom: 50px;
 }
 
-#article, #comments {
+#article, #comments, #author {
 	font-family: Fenix, Georgia, "Times New Roman", serif;
 	font-weight: 400;
 	letter-spacing: 0px;
@@ -176,7 +176,7 @@ img {
 	position: relative;
 }
 
-#comments {
+#comments, #author {
 	text-align: center;
 }
 
