--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -37,12 +37,14 @@ article: true
   </div>
   <div id="author">
     <hr>
-    <h3>
-      <a href="https://plus.google.com/110279340797376178645" rel="author">
-        <img class="media-object" src="https://secure.gravatar.com/avatar/34df2fcf73fb6b987f3e2ea2bcf47802?s=100" alt="Florent Viel"><br>
-        Florent Viel
-      </a>
-    </h3>
+    <div itemscope itemtype="http://data-vocabulary.org/Person">
+      <h3>
+        <a href="https://plus.google.com/110279340797376178645" rel="author">
+          <img itemprop="photo" class="img-circle" src="https://secure.gravatar.com/avatar/34df2fcf73fb6b987f3e2ea2bcf47802?s=100" alt="Florent Viel"><br>
+          <span itemprop="name">Florent Viel</span>
+        </a>
+      </h3>
+    </div>
   </div>
   <div id="comments">
     {% include comments.html %}
