ajout missing microdata

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -44,6 +44,11 @@ article: true
           <span itemprop="name">Florent Viel</span>
         </a>
       </h3>
+      <p class="text-muted">
+        <small>
+          Je suis <span itemprop="title">Développeur</span>, passionné de nouvelles technologies. Je travaille acutellement pour <span itemprop="affiliation">Xotelia</span>, un gestionnaire de canaux de vente en SaaS.
+        </small>
+      </p>
     </div>
   </div>
   <div id="comments">
