--- a/_includes/foot.html
+++ b/_includes/foot.html
@@ -15,12 +15,12 @@
   _paq.push(['trackPageView']);
   _paq.push(['enableLinkTracking']);
   (function() {
-    var u="//{{ site.piwik.host }}/";
+    var u="http://{{ site.piwik.host }}/";
     _paq.push(['setTrackerUrl', u+'piwik.php']);
     _paq.push(['setSiteId', {{ site.piwik.id }}]);
     var d=document, g=d.createElement('script'), s=d.getElementsByTagName('script')[0];
     g.type='text/javascript'; g.async=true; g.defer=true; g.src=u+'piwik.js'; s.parentNode.insertBefore(g,s);
   })();
 </script>
-<noscript><p><img src="//{{ site.piwik.host }}/piwik.php?idsite={{ site.piwik.id }}" style="border:0;" alt="" /></p></noscript>
+<noscript><p><img src="http://{{ site.piwik.host }}/piwik.php?idsite={{ site.piwik.id }}" style="border:0;" alt="" /></p></noscript>
 <!-- End Piwik Code -->
