--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -19,5 +19,5 @@ layout: default
     </div>
 </div>
 <footer class="clean" style="background-image: {{ pattern }}; background-position: bottom; height: 60px;">
-    <p class="copyright">&copy;{{ site.time | date: "%Y" }}, <a href="{{ site.copyright.url }}" target="_blank">{{ site.copyright.author }}</a>. <a href="{{ site.copyright.type_url }}" target="_blank">{{ site.copyright.type_title }}</a>.</p>
+    <p class="copyright">&copy; 2009 - {{ site.time | date: "%Y" }}, <a href="{{ site.copyright.url }}" target="_blank">{{ site.copyright.author }}</a>. <a href="{{ site.copyright.type_url }}" target="_blank">{{ site.copyright.type_title }}</a>.</p>
 </footer>
