--- a/_includes/head.html
+++ b/_includes/head.html
@@ -29,4 +29,6 @@
     <link rel="apple-touch-icon" href="{{ site.url }}{{ site.icon }}">
     <link rel="shortcut icon" href="{{ site.url }}/assets/images/favicon.ico">
     <link rel="alternate" type="application/rss+xml" title="RSS" href="{{ site.url }}/atom.xml">
+    <script src="http://code.jquery.com/jquery-1.11.2.min.js"></script>
+    <script src="/assets/js/geopattern.min.js"></script>
 </head>
