--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -2,8 +2,7 @@
 layout: default
 ---
 
-{% capture pattern %}{% uri_geo_pattern text=page.title %}{% endcapture %}
-<header class="clean" style="background-image: {{ pattern }}; height: 350px;">
+<header class="clean" style="height: 350px;">
     {% include top.html %}
     <a href="{{ site.url }}">
         <div id="home-title" class="site-icon-page" style="background-image: url({{ site.icon }});"></div>
@@ -18,6 +17,6 @@ layout: default
         {{ content }}
     </div>
 </div>
-<footer class="clean" style="background-image: {{ pattern }}; background-position: bottom; height: 60px;">
+<footer class="clean" style="background-position: bottom; height: 60px;">
     <p class="copyright">&copy; 2009 - {{ site.time | date: "%Y" }}, <a href="{{ site.copyright.url }}" target="_blank">{{ site.copyright.author }}</a>. <a href="{{ site.copyright.type_url }}" target="_blank">{{ site.copyright.type_title }}</a>.</p>
 </footer>
