update repo url

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -29,7 +29,7 @@ article: true
     <p>
       <small>
         <em>
-          Si vous trouvez une typo, n'hésitez pas à <a href="{{ site.github.repo }}/edit/master/{{ page.path }}">forker et éditer cet article</a>. Merci beaucoup !
+          Si vous trouvez une typo, n'hésitez pas à <a href="{{ site.github.repository_url }}/edit/master/{{ page.path }}">forker et éditer cet article</a>. Merci beaucoup !
         </em>
       </small>
     </p>
