--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -33,6 +33,11 @@ article: true
         </em>
       </small>
     </p>
+    <p>
+      <small>
+        <a rel="license" href="http://creativecommons.org/licenses/by-nc/4.0/"><img alt="Licence Creative Commons" style="border-width:0" src="https://i.creativecommons.org/l/by-nc/4.0/88x31.png" /></a><br /><span xmlns:dct="http://purl.org/dc/terms/" property="dct:title">&ldquo;{{ page.title }}&rdquo;</span> de <a xmlns:cc="http://creativecommons.org/ns#" href="{{ site.copyright.url }}" property="cc:attributionName" rel="cc:attributionURL">{{ site.copyright.author }}</a> est mis à disposition selon les termes de la <a rel="license" href="http://creativecommons.org/licenses/by-nc/4.0/">licence Creative Commons Attribution - Pas d’Utilisation Commerciale 4.0 International</a>.
+      </small>
+    </p>
   </div>
   <div id="author">
     <hr>
