add some pictures

--- a/assets/css/default.css
+++ b/assets/css/default.css
@@ -196,6 +196,11 @@ img {
 	border-bottom: 0px;
 }
 
+#article img {
+	margin: auto;
+	display: block;
+}
+
 a.site-title:hover, .copyright a:hover {
 	text-decoration: underline;
 }
