add missing js lib

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -30,5 +30,6 @@
     <link rel="shortcut icon" href="{{ site.url }}/assets/images/favicon.ico">
     <link rel="alternate" type="application/rss+xml" title="RSS" href="{{ site.url }}/atom.xml">
     <script src="http://code.jquery.com/jquery-1.11.2.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/FitText.js/1.1/jquery.fittext.min.js"></script>
     <script src="/assets/js/geopattern.min.js"></script>
 </head>
