update github pages + use jekyll feed plugin

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -29,6 +29,7 @@
     <link rel="apple-touch-icon" href="{{ site.url }}{{ site.icon }}">
     <link rel="shortcut icon" href="{{ site.url }}/assets/images/favicon.ico">
     <link rel="alternate" type="application/rss+xml" title="RSS" href="{{ site.url }}/atom.xml">
+    {% feed_meta %}
     <script src="http://code.jquery.com/jquery-1.11.2.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/FitText.js/1.1/jquery.fittext.min.js"></script>
     <script src="/assets/js/geopattern.min.js"></script>
