--- a/_includes/comments.html
+++ b/_includes/comments.html
@@ -1,7 +1,7 @@
 <div id="disqus_thread"></div>
 <script type="text/javascript">
     var disqus_shortname = '{{ site.disqus.id }}'; // required: replace example with your forum shortname
-    var disqus_url = 'http://{{ site.domain }}{{ page.url }}';
+    var disqus_url = 'https://{{ site.domain }}{{ page.url }}';
     var disqus_title = "{{ page.title }}";
     var disqus_identifier = '{{ page.meta.dsq_thread_id ? page.meta.dsq_thread_id : page.url }}';
     (function() {
