--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -50,7 +50,7 @@ article: true
       </h3>
       <p class="text-muted">
         <small>
-          Je suis <span itemprop="title">Développeur</span>, passionné de nouvelles technologies. Je travaille acutellement pour <span itemprop="affiliation">Xotelia</span>, un gestionnaire de canaux de vente en SaaS.
+          Je suis <span itemprop="title">Développeur</span>, passionné de nouvelles technologies. Je travaille acutellement pour <span itemprop="affiliation">Cisco</span> sur un produit de cyber sécurité.
         </small>
       </p>
     </div>
